NOP error handlers for UnityLoader

--- a/app/views/webgls/show.html.erb
+++ b/app/views/webgls/show.html.erb
@@ -6,6 +6,12 @@
   <script src="<%= @unity_progress %>"></script>
   <script src="<%= @unity_loader %>"></script>
   <script>
+    // this has to go right after @unity_loader is loaded to guarantee no random JS errors get alert-boxed
+    UnityLoader.Error.handler = function(e, t){
+      // NOP to stop the nuisance alert boxes for *all* (even non-Unity) JS errors
+    }
+  </script>
+  <script>
     $(document).on('ready page:load', function(){
       var gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgress});
     });
