--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -8,6 +8,12 @@ webgl = FactoryService.webgl_unity(webgl_id)
 <script src="<%= @unity_progress %>"></script>
 <script src="<%= @unity_loader %>"></script>
 <script>
+  // this has to go right after @unity_loader is loaded to guarantee no random JS errors get alert-boxed
+  UnityLoader.Error.handler = function(e, t){
+    // NOP to stop the nuisance alert boxes for *all* (even non-Unity) JS errors
+  }
+</script>
+<script>
   var gameInstance = undefined;
   $(document).on('turbolinks:load', function() {
     // load the webgl if the webgl tab is already active
