--- a/app/views/webgls/show.html.erb
+++ b/app/views/webgls/show.html.erb
@@ -12,12 +12,56 @@
     }
   </script>
   <script>
+    var gameInstance;
+    var gameReady = false;
+    // Toggling for focus of canvas
+    function GameControlReady () {
+      gameReady = true;
+    }
     $(document).on('ready page:load', function(){
-      var gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
+
+      gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
+
+      function FocusCanvas(focus) {
+        if (gameReady) {
+          var SendMessage = gameInstance.SendMessage;
+          SendMessage("GameControl", "FocusCanvas", focus);
+        }
+      }
+
+      document.addEventListener('click', function(e) {
+        if (e.target.id == "#canvas") {
+          // Clicked on canvas
+          FocusCanvas("1");
+            } else {
+          // Clicked outside of canvas
+          FocusCanvas("0");
+        }
+      });
+
+      document.addEventListener('keydown', function(event) {
+        if (event.defaultPrevented) {
+          return; // Do nothing if the event was already processed
+        }
+
+        switch (event.key) {
+          case "Tab":
+            FocusCanvas("0");
+          break;
+          default:
+          return;
+        }
+
+      }, true);
+
+      // Take user to a POI when passed a string from WebGL
+      function goToParagraph() {
+        // don't do anything quite yet - here to prevent errors
+      }
     });
   </script>
 <% end %>
 <div class="webgl-content">
-  <div id="gameContainer" style="width: 1024px; height: 600px"></div>
+  <div id="gameContainer" style="width: 1024px; height: 600px" tabindex="0"></div>
 </div>
 <%= render template: 'layouts/boilerplate' %>
