rebase with webgl loading screen; define goToParagraph on 3D tab

--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -64,6 +64,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
         // Take user to a POI when passed a string from WebGL
         function goToParagraph() {
           // don't do anything quite yet - here to prevent errors
+          var goToParagraph = null;
         }
       }
     }
@@ -109,6 +110,7 @@ webgl = FactoryService.webgl_unity(webgl_id)
         // Take user to a POI when passed a string from WebGL
         function goToParagraph() {
           // don't do anything quite yet - here to prevent errors
+          var goToParagraph = null;
         }
       }
     });
