--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -258,17 +258,26 @@ webgl = FactoryService.webgl_unity(webgl_id)
         }, true);
 
 
+
         // POI to CFI webgl -> epub mapping stuff
         var poiToCfiMap = {};
 
         var fetch_poi = function() {
           $.get("<%= "#{epub_file_path(id: @presenter.id, file: 'epub-webgl-map.json')}" %>", function(data) {
-            poiToCfiMap = data;
+            data.forEach(function(map) {
+              poiToCfiMap[map['poi']] = map['cfi']
+            })
           });
         }
         // Take user to a POI when passed a string from WebGL
-        function goToParagraph() {
-          // don't do anything quite yet - here to prevent errors
+        function goToParagraph(p) {
+          var par = "par" + p;
+          if (poiToCfiMap[par]) {
+            console.log("CFI " + poiToCfiMap[par] + " found for POI " + par);
+            reader.gotoPage('epubcfi(' + poiToCfiMap[par] + ')');
+          } else {
+            console.log("No CFI found for POI " + par);
+          };
         }
 
         var toggle = cozy.control.widget.toggle({
