--- a/app/views/webgls/_tab.html.erb
+++ b/app/views/webgls/_tab.html.erb
@@ -1,4 +1,6 @@
-<%
+<% content_for :head do %>
+  <meta name="turbolinks-cache-control" content="no-cache">
+<% end
 webgl_id = @monograph_presenter.webgl_id
 webgl = FactoryService.webgl_unity(webgl_id)
 @unity_progress = javascript_path 'unity_progress_heliotrope'
@@ -31,7 +33,11 @@ webgl = FactoryService.webgl_unity(webgl_id)
   $(document).on('turbolinks:load', function() {
     // load the webgl if the webgl tab is already active
     if ($('#webgl-tab').hasClass('active')) {
-      if (typeof gameInstance === 'undefined') {
+
+      if (heliotropeMobileUser === true) {
+        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, mobile devices are not compatible with WebGL.</div>');
+      }
+      else if (typeof gameInstance === 'undefined' ) {
 
 
         gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
@@ -71,8 +77,11 @@ webgl = FactoryService.webgl_unity(webgl_id)
     }
     // or load the webgl if the tab is clicked
     $("a[href='#webgl']").bind('click', function() {
-      if (typeof gameInstance === 'undefined') {
 
+      if (heliotropeMobileUser === true) {
+        $('#gameContainer').html('<div id="epub-webgl-mobile-message">Sorry, mobile devices are not compatible with WebGL.</div>');
+      }
+      else if (typeof gameInstance === 'undefined' ) {
 
         gameInstance = UnityLoader.instantiate("gameContainer", "<%= @unity_json %>", {onProgress: UnityProgressHeliotrope});
 
